--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-svg {
+.main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); 
+}
+
+svg {
     width: 500px;
     height: 500px;
 }
